Made about page have <details>, and fixed the mobile expirence on the Join page

--- a/about.html
+++ b/about.html
@@ -51,50 +51,50 @@
             </p>
           </div>
           <div class="faq">
-            <div class="block green">
-              <h3>What's the IP?</h3>
+            <details class="block blue">
+              <summary>What's the IP?</summary>
               <p>
                 Streamline is a whitelist-only Minecraft server, meaning you
                 will need to be accepted to join. If you have been accepted, you
                 can connect with this IP:
                 <strong>play.streamlinesmp.com</strong>
               </p>
-            </div>
-            <div class="block blue">
-              <h3>What is this?</h3>
+            </details>
+            <details class="block purple">
+              <summary>What is this?</summary>
               <p>
                 Streamline is a whitelist-only Minecraft vanilla SMP that
                 promotes a “economy” that is diamond-based. We have a free build
                 system allowing you to build almost anywhere you want, without
                 many limitations.
               </p>
-            </div>
-            <div class="block yellow">
-              <h3>What's the seed?</h3>
+            </details>
+            <details class="block yellow">
+              <summary>What's the seed?</summary>
               <p>
                 We do not publicly release the seed for the season until after
                 it is over. For concern that people will use it to find things
                 that would have otherwise taken much longer to find.
               </p>
-            </div>
-            <div class="block red">
-              <h3>How is it paid for?</h3>
+            </details>
+            <details class="block red">
+              <summary>How is it paid for?</summary>
               <p>
                 The server is paid for by donations, the server is hosted by a
                 3rd party hosting company and most of the money for the server
                 comes from donations.
               </p>
-            </div>
-            <div class="block orange">
-              <h3>Is it "pay to win"?</h3>
+            </details>
+            <details class="block green">
+              <summary>Is it "pay to win"?</summary>
               <p>
                 No, there is no way to buy ways foward in the server using real
                 money, if you dontate you only get things that don't effect your
                 survival expirience.
               </p>
-            </div>
-            <div class="block green">
-              <h3>How does this work?</h3>
+            </details>
+            <details class="block orange">
+              <summary>How does this work?</summary>
               <p>
                 Streamline SMP is a single Minecraft server located in New York
                 City, NY. The software used by the server is
@@ -118,34 +118,34 @@
                   >Spigot</a
                 >.
               </p>
-            </div>
-            <div class="block purple">
-              <h3>How long is the wait?</h3>
+            </details>
+            <details class="block purple">
+              <summary>How long is the wait?</summary>
               <p>
                 Once you submit an application it will ussally take no more than
                 24 hours to get reviewed. While you wait feel free to talk to
                 the comunity and get to know the Streamliners!
               </p>
-            </div>
-            <div class="block blue">
-              <h3>Who are we?</h3>
+            </details>
+            <details class="block yellow">
+              <summary>Who are we?</summary>
               <p>
                 We are Streamline, hello! Just a bunch of gamers together
                 playing Minecraft! The server is run by and controlled by the
                 players and anyone can become apart of the servers staff team.
               </p>
-            </div>
-            <div class="block yellow">
-              <h3>What about grief?</h3>
+            </details>
+            <details class="block blue">
+              <summary>What about grief?</summary>
               <p>
                 How do we stop grief? We keep greif from happing using plugins
                 that allow us to undo and check any action a user can do, as
                 well as having user screening in the form of the application
                 into the server.
               </p>
-            </div>
-            <div class="block red">
-              <h3>Can I redo my application?</h3>
+            </details>
+            <details class="block red">
+              <summary>Can I redo my application?</summary>
               <p>
                 Absolutely, yes you can definitly redo your application! Just go
                 back to the
@@ -158,9 +158,9 @@
                 and as long as your old one has been reviewed you will have the
                 ability to submit a new one.
               </p>
-            </div>
-            <div class="block red">
-              <h3>What are the rules?</h3>
+            </details>
+            <details class="block red">
+              <summary>What are the rules?</summary>
               <p>
                 You can check the basic rules
                 <a
@@ -177,9 +177,9 @@
                 >. The rules are also subject to change, however you will be
                 notified to the change if you are in the Discord server.
               </p>
-            </div>
-            <div class="block green">
-              <h3>Can I get banned for____?</h3>
+            </details>
+            <details class="block green">
+              <summary>Can I get banned for____?</summary>
               <p>
                 If you have any questions about what is against the rules or
                 allowed,
@@ -189,9 +189,9 @@
                 That is the best way to make sure that you stay safe and don't
                 risk getting banned!
               </p>
-            </div>
-            <div class="block orange">
-              <h3>Are clients allowed?</h3>
+            </details>
+            <details class="block orange">
+              <summary>Are clients allowed?</summary>
               <p>
                 Yes, clients are somwhat allowed. However, clients that break
                 the
@@ -204,9 +204,9 @@
                 However, Fabric, Badlion, Lunar, and most other simular clients
                 are allowed.
               </p>
-            </div>
-            <div class="block blue">
-              <h3>Is there minimum age?</h3>
+            </details>
+            <details class="block blue">
+              <summary>Is there minimum age?</summary>
               <p>
                 Yes, the minimum age is 13. The reason we picked this age is
                 because we felt as a community that this was a resonable age for
@@ -219,7 +219,7 @@
                 >
                 server safe for <strong>anyone 13+</strong>!
               </p>
-            </div>
+            </details>
           </div>
         </article>
       </main>
