--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
         </nav>
       </header>
       <main>
-        <h1 class="main-header orange">Contact</h1>
+        <h1 class="main-header orange">CONTACT</h1>
       </main>
       <footer>
         <p>© 2022 ALL RIGHTS RESERVED</p>
