--- a/join.html
+++ b/join.html
@@ -45,7 +45,7 @@
           <div>
             <div class="block">
               <div class="block num purple">
-                <h2>1: Join the Discord</h2>
+                <h2>Join the Discord</h2>
               </div>
               <p>
                 Join the Discord if you haven't already. Having a Discord
@@ -89,7 +89,7 @@
           <div>
             <div class="block">
               <div class="block num yellow">
-                <h2>2: Fill out Google Form</h2>
+                <h2>Fill out Google Form</h2>
               </div>
               <p>
                 The questions aren't that difficult but try to be as detailed as
@@ -108,7 +108,7 @@
           <div>
             <div class="block">
               <div class="block num blue">
-                <h2>3: That's it!</h2>
+                <h2>That's it!</h2>
               </div>
               <p>
                 The form has been submitted. Next a staff member will review
