--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
               <summary>Is it "pay to win"?</summary>
               <p>
                 No, there is no way to buy ways foward in the server using real
-                money, if you dontate you only get things that don't effect your
+                money, if you donate you only get things that don't effect your
                 survival expirience.
               </p>
             </details>
