Changed form from Google to Dyno

--- a/about.html
+++ b/about.html
@@ -151,9 +151,9 @@
                 back to the
                 <a
                   target="”_blank”"
-                  href="https://docs.google.com/forms/d/e/1FAIpQLSeDL-TMHlnh70Wt8XiJEsVLzcitixY8Q8X-8RUmf5eMtf3Cbw/viewform"
+                  href="https://dyno.gg/form/8ac19b49"
                   class="block-link"
-                  >Google Form</a
+                  >application</a
                 >
                 and as long as your old one has been reviewed you will have the
                 ability to submit a new one.
