--- a/join.html
+++ b/join.html
@@ -89,7 +89,7 @@
           <div>
             <div class="block">
               <div class="block num yellow">
-                <h2>Fill out Google Form</h2>
+                <h2>Fill out the application</h2>
               </div>
               <p>
                 The questions aren't that difficult but try to be as detailed as
@@ -100,7 +100,7 @@
               <a
                 class="button"
                 target="_blank"
-                href="https://forms.gle/XXNQ7xodfyhKRneK6"
+                href="https://dyno.gg/form/8ac19b49"
                 >Fill out the form</a
               >
             </div>
