remove .html from links

--- a/about.html
+++ b/about.html
@@ -27,13 +27,13 @@
             <a href="./">
               <li>HOME</li>
             </a>
-            <a href="./community.html">
+            <a href="./community">
               <li>COMMUNITY</li>
             </a>
-            <a href="./about.html">
+            <a href="./about">
               <li class="current-pg">ABOUT</li>
             </a>
-            <a href="./join.html">
+            <a href="./join">
               <li>JOIN</li>
             </a>
           </ul>
@@ -47,7 +47,7 @@
             <p>
               Have a question? We have the answer! If you don't see your
               question here you can always hit us up at our
-              <a class="sub-header-link" href="./contact.html">Contact Page</a>.
+              <a class="sub-header-link" href="./contact">Contact Page</a>.
             </p>
           </div>
           <div class="faq">
@@ -183,7 +183,7 @@
               <p>
                 If you have any questions about what is against the rules or
                 allowed,
-                <a href="./contact.html" class="block-link"
+                <a href="./contact" class="block-link"
                   >please contact a staff member to ask!</a
                 >
                 That is the best way to make sure that you stay safe and don't
@@ -226,7 +226,7 @@
       <footer>
         <p>© 2022 ALL RIGHTS RESERVED</p>
         <div class="extra-links">
-          <p><a class="link" href="./contact.html">CONTACT US</a></p>
+          <p><a class="link" href="./contact">CONTACT US</a></p>
           <p>
             <a
               target="”_blank”"
@@ -235,7 +235,7 @@
               >DONATE</a
             >
           </p>
-          <p><a class="link" href="./contact.html">BUSINESS INQUIRIES</a></p>
+          <p><a class="link" href="./contact">BUSINESS INQUIRIES</a></p>
         </div>
       </footer>
     </div>
