--- a/base.html
+++ b/base.html
@@ -26,13 +26,13 @@
             <a href="./">
               <li>HOME</li>
             </a>
-            <a href="./community.html">
+            <a href="./community">
               <li>COMMUNITY</li>
             </a>
-            <a href="./about.html">
+            <a href="./about">
               <li>ABOUT</li>
             </a>
-            <a href="./join.html">
+            <a href="./join">
               <li>JOIN</li>
             </a>
           </ul>
@@ -42,7 +42,7 @@
       <footer>
         <p>© 2022 ALL RIGHTS RESERVED</p>
         <div class="extra-links">
-          <p><a class="link" href="./contact.html">CONTACT US</a></p>
+          <p><a class="link" href="./contact">CONTACT US</a></p>
           <p>
             <a
               target="”_blank”"
@@ -51,7 +51,7 @@
               >DONATE</a
             >
           </p>
-          <p><a class="link" href="./contact.html">BUSINESS INQUIRIES</a></p>
+          <p><a class="link" href="./contact">BUSINESS INQUIRIES</a></p>
         </div>
       </footer>
     </div>
