--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <a href="./">
               <li class="current-pg">HOME</li>
             </a>
-            <a href="./community.html">
+            <a href="./community">
               <li>COMMUNITY</li>
             </a>
-            <a href="./about.html">
+            <a href="./about">
               <li>ABOUT</li>
             </a>
-            <a href="./join.html">
+            <a href="./join">
               <li>JOIN</li>
             </a>
           </ul>
@@ -80,7 +80,7 @@
               to see you join it! Feel free to check any of the
               <a
                 style="color: black; text-decoration: underline"
-                href="./community.html"
+                href="./community"
                 >Streamline social media</a
               >
               to talk with us!
@@ -112,13 +112,13 @@
               restrictions or annoying alerts.
             </p>
           </div>
-          <a class="button hide-desktop" href="./join.html">Join</a>
+          <a class="button hide-desktop" href="./join">Join</a>
         </article>
       </main>
       <footer>
         <p>© 2022 ALL RIGHTS RESERVED</p>
         <div class="extra-links">
-          <p><a class="link" href="./contact.html">CONTACT US</a></p>
+          <p><a class="link" href="./contact">CONTACT US</a></p>
           <p>
             <a
               target="”_blank”"
@@ -127,7 +127,7 @@
               >DONATE</a
             >
           </p>
-          <p><a class="link" href="./contact.html">BUSINESS INQUIRIES</a></p>
+          <p><a class="link" href="./contact">BUSINESS INQUIRIES</a></p>
         </div>
       </footer>
     </div>
