--- a/join.html
+++ b/join.html
@@ -27,13 +27,13 @@
             <a href="./">
               <li>HOME</li>
             </a>
-            <a href="./community.html">
+            <a href="./community">
               <li>COMMUNITY</li>
             </a>
-            <a href="./about.html">
+            <a href="./about">
               <li>ABOUT</li>
             </a>
-            <a href="./join.html">
+            <a href="./join">
               <li class="current-pg">JOIN</li>
             </a>
           </ul>
@@ -254,7 +254,7 @@
       <footer>
         <p>© 2022 ALL RIGHTS RESERVED</p>
         <div class="extra-links">
-          <p><a class="link" href="./contact.html">CONTACT US</a></p>
+          <p><a class="link" href="./contact">CONTACT US</a></p>
           <p>
             <a
               target="”_blank”"
@@ -263,7 +263,7 @@
               >DONATE</a
             >
           </p>
-          <p><a class="link" href="./contact.html">BUSINESS INQUIRIES</a></p>
+          <p><a class="link" href="./contact">BUSINESS INQUIRIES</a></p>
         </div>
       </footer>
     </div>
