Fixed spelling errors

--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
             <details class="block blue">
               <summary>What about grief?</summary>
               <p>
-                How do we stop grief? We keep greif from happing using plugins
+                How do we stop grief? We keep grief from happing using plugins
                 that allow us to undo and check any action a user can do, as
                 well as having user screening in the form of the application
                 into the server.
