--- a/community.html
+++ b/community.html
@@ -41,7 +41,7 @@
       </header>
       <main>
         <h1 class="main-header red">JOIN THE CONVERSATION</h1>
-        <h2 class="sub-header">OUR SOICAL MEDIA</h2>
+        <h2 class="sub-header">OUR SOCIAL MEDIA</h2>
         <div class="grid">
           <a
             target="”_blank”"
