Fixed typeing mistakes

--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
             </div>
             <div class="block">
               <h3>
-                Got something more important or business related? Send us a
+                Got something more important or business related? Send us an
                 email!
               </h3>
               <div class="wrapper-icon-txt blue">
