--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             <h2>ECONOMY:</h2>
             <p>
               The economy on Streamline is based on diamonds, it works much like
-              the real economy, with buys and sales using one central currency.
+              its real-world counterpart, with buys and sales using one central
+              currency.
             </p>
             <p>
               You can become a tycoon and make thousands of diamonds, or you can
