Add description to pages for SEO

--- a/base.html
+++ b/base.html
@@ -7,6 +7,10 @@
     <title>Streamline SMP - Vanilla Minecraft Server</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="Images/server-icon.png" />
+    <meta
+      name="description"
+      content="Streamline SMP is a vanilla Minecraft server with a diamond-based economy."
+    />
   </head>
 
   <body>
