--- a/community.html
+++ b/community.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="community.css" />
     <link rel="icon" href="Images/server-icon.png" />
+    <meta
+      name="description"
+      content="Streamline SMP is a vanilla Minecraft server with a diamond-based economy."
+    />
   </head>
 
   <body>
