--- a/about.html
+++ b/about.html
@@ -68,9 +68,9 @@
               <summary>What is this?</summary>
               <p>
                 Streamline is a whitelist-only Minecraft vanilla SMP that
-                promotes a “economy” that is diamond-based. We have a free build
-                system allowing you to build almost anywhere you want, without
-                many limitations.
+                promotes an "economy" that is diamond-based. We have a free
+                build system allowing you to build almost anywhere you want,
+                without many limitations.
               </p>
             </details>
             <details class="block yellow">
@@ -93,7 +93,7 @@
               <summary>Is it "pay to win"?</summary>
               <p>
                 No, there is no way to buy ways foward in the server using real
-                money, if you donate you only get things that don't effect your
+                money, if you donate you only get things that don't affect your
                 survival expirience.
               </p>
             </details>
@@ -126,7 +126,7 @@
             <details class="block purple">
               <summary>How long is the wait?</summary>
               <p>
-                Once you submit an application it will ussally take no more than
+                Once you submit an application it will usually take no more than
                 24 hours to get reviewed. While you wait feel free to talk to
                 the comunity and get to know the Streamliners!
               </p>
@@ -136,23 +136,23 @@
               <p>
                 We are Streamline, hello! Just a bunch of gamers together
                 playing Minecraft! The server is run by and controlled by the
-                players and anyone can become apart of the servers staff team.
+                players and anyone can become a part of the servers staff team.
               </p>
             </details>
             <details class="block blue">
-              <summary>What about grief?</summary>
+              <summary>What about griefing?</summary>
               <p>
-                How do we stop grief? We keep grief from happing using plugins
-                that allow us to undo and check any action a user can do, as
-                well as having user screening in the form of the application
-                into the server.
+                How do we stop griefing? We keep griefing from happing using
+                plugins that allow us to undo and check any action a user can
+                do, as well as having user screening in the form of the
+                application into the server.
               </p>
             </details>
             <details class="block red">
               <summary>Can I redo my application?</summary>
               <p>
-                Absolutely, yes you can definitly redo your application! Just go
-                back to the
+                Absolutely, yes you can definitely redo your application! Just
+                go back to the
                 <a
                   target="”_blank”"
                   href="https://dyno.gg/form/8ac19b49"
@@ -197,7 +197,7 @@
             <details class="block orange">
               <summary>Are clients allowed?</summary>
               <p>
-                Yes, clients are somwhat allowed. However, clients that break
+                Yes, clients are somewhat allowed. However, clients that break
                 the
                 <a
                   target="”_blank”"
@@ -205,7 +205,7 @@
                   class="block-link"
                   >rules</a
                 >, like Wurst client are not allowed for obvious reasons.
-                However, Fabric, Badlion, Lunar, and most other simular clients
+                However, Fabric, Badlion, Lunar, and most other similar clients
                 are allowed.
               </p>
             </details>
