--- a/join.html
+++ b/join.html
@@ -60,8 +60,7 @@
                   target="”_blank”"
                   href="https://www.discord.com"
                   >Discord's website</a
-                >. Once you have joined the Discord go to the
-                #applications-and-info channel.
+                >.
               </p>
               <p>
                 Once you have joined the Discord go to the
@@ -204,7 +203,7 @@
                 Ok so you waited for your application to be reviewed and you
                 were accepted, congrats by the way! But now what? When you get
                 accepted you will receive the “Streamliners” role on Discord,
-                this gives you permissions to talk in channels that only fellow
+                this gives you permission to talk in channels that only fellow
                 “Streamliners” will have access to. You will also be whitelisted
                 into the Minecraft Server within about 10 minutes of being
                 accepted. Once you have access to the server and these channels
