Added better descriptions for SEO

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="Images/server-icon.png" />
     <meta
       name="description"
-      content="Streamline SMP is a vanilla Minecraft server with a diamond-based economy."
+      content="Have a question? We have the answer! Read our Questions and Answers for more information about Streamline SMP!"
     />
   </head>
 
