--- a/community.html
+++ b/community.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="Images/server-icon.png" />
     <meta
       name="description"
-      content="Streamline SMP is a vanilla Minecraft server with a diamond-based economy."
+      content="Join the incredible Streamline SMP community, get involved in what's happening, and meet great people along the way!"
     />
   </head>
 
