--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="Images/server-icon.png" />
     <meta
       name="description"
-      content="Streamline SMP is a vanilla Minecraft server with a diamond-based economy."
+      content="Have an issue, question, or an inconvenience about Streamline SMP? Contact us and get a response within 24 hours!"
     />
   </head>
 
