--- a/discord.html
+++ b/discord.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Discord-Redirect</title>
-</head>
-<body>
-    <h1 style="font-family: sans-serif;">Redirecting...</h1>
+    <meta
+      name="description"
+      content="Join the Streamline SMP Discord! Chat with the community and make friends along the way!"
+    />
+  </head>
+  <body>
+    <h1 style="font-family: sans-serif">Redirecting...</h1>
     <script>
-        window.location.replace("https://discord.gg/SVNbGfSApd");
+      window.location.replace('https://discord.gg/SVNbGfSApd')
     </script>
-</body>
+  </body>
 </html>
