--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="Images/server-icon.png" />
     <meta
       name="description"
-      content="Streamline SMP is a vanilla Minecraft server with a diamond-based economy."
+      content="Streamline SMP is a vanilla Minecraft server with a diamond-based economy. With trust-based rules and a whitelist-only player base, it's Minecraft SMP for all!"
     />
   </head>
 
