--- a/join.html
+++ b/join.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="Images/server-icon.png" />
     <meta
       name="description"
-      content="Streamline SMP is a vanilla Minecraft server with a diamond-based economy."
+      content="Follow these simple steps to join Streamline SMP today and experience the incredible community and experience of playing!"
     />
   </head>
 
