Added better titles

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Streamline SMP - Vanilla Minecraft Server</title>
+    <title>Contact - Streamline SMP - Vanilla Minecraft Server</title>
     <link rel="stylesheet" href="contact.css" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="Images/server-icon.png" />
