--- a/discord.html
+++ b/discord.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Discord-Redirect</title>
+    <title>Streamline SMP Discord</title>
     <meta
       name="description"
       content="Join the Streamline SMP Discord! Chat with the community and make friends along the way!"
