--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
                 </svg>
                 <p class="sub-text">We can't wait to hear from you!</p>
               </div>
-              <a href="mailto:streamlinesmp@gmail.com" class="button"
+              <a href="mailto:support@streamlinesmp.com" class="button"
                 >Email Us</a
               >
               <p class="response-time">Average response >24 hours</p>
