--- a/apply.html
+++ b/apply.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Streamline SMP Discord</title>
+    <title>Streamline SMP Apply</title>
     <meta
       name="description"
-      content="Join the Streamline SMP Discord! Chat with the community and make friends along the way!"
+      content="Apply to Streamline SMP! We are a Discord server for the Streamline SMP Minecraft server."
     />
   </head>
   <body>
