--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       name="description"
       content="Streamline SMP is a vanilla Minecraft server with a diamond-based economy. With trust-based rules and a whitelist-only player base, it's Minecraft SMP for all!"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZNM1DDKZ09"></script><script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-ZNM1DDKZ09');</script>
   </head>
 
   <body>
