--- a/about.html
+++ b/about.html
@@ -92,9 +92,9 @@
             <details class="block green">
               <summary>Is it "pay to win"?</summary>
               <p>
-                No, there is no way to buy ways foward in the server using real
+                No, there is no way to buy ways forward in the server using real
                 money, if you donate you only get things that don't affect your
-                survival expirience.
+                survival experience.
               </p>
             </details>
             <details class="block orange">
@@ -128,7 +128,7 @@
               <p>
                 Once you submit an application it will usually take no more than
                 24 hours to get reviewed. While you wait feel free to talk to
-                the comunity and get to know the Streamliners!
+                the community and get to know the Streamliners!
               </p>
             </details>
             <details class="block yellow">
@@ -142,7 +142,7 @@
             <details class="block blue">
               <summary>What about griefing?</summary>
               <p>
-                How do we stop griefing? We keep griefing from happing using
+                How do we stop griefing? We keep griefing from happening using
                 plugins that allow us to undo and check any action a user can
                 do, as well as having user screening in the form of the
                 application into the server.
@@ -213,8 +213,8 @@
               <summary>Is there minimum age?</summary>
               <p>
                 Yes, the minimum age is 13. The reason we picked this age is
-                because we felt as a community that this was a resonable age for
-                the server. The server is a
+                because we felt as a community that this was a reasonable age
+                for the server. The server is a
                 <a
                   target="”_blank”"
                   href="https://en.wiktionary.org/wiki/SFW#:~:text=(Internet%2C%20initialism)%20Safe%20for,to%20employers%20or%20co%2Dworkers."
