--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,8 @@
           <div class="content-grid">
             <div class="block">
               <h3>
-                Want a fast response? Fill out the form and sombody in our staff
-                team will message you on Discord.
+                Want a fast response? Fill out the form and somebody in our
+                staff team will message you on Discord.
               </h3>
               <div class="wrapper-icon-txt green">
                 <svg
