--- a/join.html
+++ b/join.html
@@ -124,7 +124,7 @@
             <a
               class="button hide-desktop"
               target="_blank"
-              href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+              href="https://www.youtube.com/watch?v=3"
               >Tutorial Video</a
             >
             <iframe
