added Google Tag Manager to all webpages

--- a/apply.html
+++ b/apply.html
@@ -8,6 +8,21 @@
       name="description"
       content="Apply to Streamline SMP! We are a Discord server for the Streamline SMP Minecraft server."
     />
+
+    <!-- Google Tag Manager -->
+    <script>
+      ;(function (w, d, s, l, i) {
+        w[l] = w[l] || []
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&l=' + l : ''
+        j.async = true
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
+        f.parentNode.insertBefore(j, f)
+      })(window, document, 'script', 'dataLayer', 'GTM-M6LW6WS')
+    </script>
+    <!-- End Google Tag Manager -->
   </head>
   <body>
     <h1 style="font-family: sans-serif">Redirecting...</h1>
