--- a/join.html
+++ b/join.html
@@ -12,6 +12,21 @@
       name="description"
       content="Follow these simple steps to join Streamline SMP today and experience the incredible community and experience of playing!"
     />
+
+    <!-- Google Tag Manager -->
+    <script>
+      ;(function (w, d, s, l, i) {
+        w[l] = w[l] || []
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&l=' + l : ''
+        j.async = true
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
+        f.parentNode.insertBefore(j, f)
+      })(window, document, 'script', 'dataLayer', 'GTM-M6LW6WS')
+    </script>
+    <!-- End Google Tag Manager -->
   </head>
 
   <body>
