Added support for the Dynmap

--- a/map.html
+++ b/map.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Streamline SMP - Vanilla Minecraft Server</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="map.css" />
     <link rel="icon" href="Images/server-icon.png" />
     <meta
       name="description"
@@ -57,7 +58,9 @@
           </ul>
         </nav>
       </header>
-      <main></main>
+      <main>
+        <iframe class="map-frame" src="http://142.44.255.252:8073/"></iframe>
+      </main>
       <footer>
         <p>© 2022 ALL RIGHTS RESERVED</p>
         <div class="extra-links">
