--- a/community.html
+++ b/community.html
@@ -215,7 +215,7 @@
               >DONATE</a
             >
           </p>
-          <p><a class="link" href="./contact">BUSINESS INQUIRIES</a></p>
+          <p><a class="link" href="./map">MAP</a></p>
         </div>
       </footer>
     </div>
