--- a/join.html
+++ b/join.html
@@ -281,7 +281,7 @@
               >DONATE</a
             >
           </p>
-          <p><a class="link" href="./map">MAP</a></p>
+          <p><a class="link" href="http://map.streamlinesmp.com">MAP</a></p>
         </div>
       </footer>
     </div>
