Added stats button to community

--- a/community.html
+++ b/community.html
@@ -202,6 +202,15 @@
             <h3>MC Buzz</h3>
           </a>
         </div>
+        <h2 class="sub-header">CHECK OUT THE STATS</h2>
+        <div class="grid">
+          <a
+            class="button stats"
+            target="_blank"
+            href="http://stats.streamlinesmp.com/"
+            >Minecraft Server Stats</a
+          >
+        </div>
       </main>
       <footer>
         <p>© 2022 ALL RIGHTS RESERVED</p>
