--- a/community.html
+++ b/community.html
@@ -204,10 +204,7 @@
         </div>
         <h2 class="sub-header">CHECK OUT THE STATS</h2>
         <div class="grid">
-          <a
-            class="button stats"
-            target="_blank"
-            href="http://stats.streamlinesmp.com/"
+          <a class="button stats" href="http://stats.streamlinesmp.com/"
             >Minecraft Server Stats</a
           >
         </div>
