Moved a lot of stuff around

--- a/about.html
+++ b/about.html
@@ -245,7 +245,17 @@
       <footer>
         <p>© 2022 ALL RIGHTS RESERVED</p>
         <div class="extra-links">
-          <p><a class="link" href="./contact">CONTACT US</a></p>
+          <p>
+            <a class="link button" href="http://map.streamlinesmp.com"
+              ><strong>MAP</strong></a
+            >
+          </p>
+          <p>
+            <a class="link button" href="http://map.streamlinesmp.com"
+              ><strong>STATS</strong></a
+            >
+          </p>
+          <hr />
           <p>
             <a
               target="”_blank”"
@@ -254,7 +264,7 @@
               >DONATE</a
             >
           </p>
-          <p><a class="link" href="http://map.streamlinesmp.com">MAP</a></p>
+          <p><a class="link" href="./contact">CONTACT US</a></p>
         </div>
       </footer>
     </div>
