Fixed stats link

--- a/community.html
+++ b/community.html
@@ -218,7 +218,7 @@
             >
           </p>
           <p>
-            <a class="link button" href="http://map.streamlinesmp.com"
+            <a class="link button" href="http://stats.streamlinesmp.com"
               ><strong>STATS</strong></a
             >
           </p>
