--- a/about.html
+++ b/about.html
@@ -251,7 +251,7 @@
             >
           </p>
           <p>
-            <a class="link button" href="http://map.streamlinesmp.com"
+            <a class="link button" href="http://stats.streamlinesmp.com"
               ><strong>STATS</strong></a
             >
           </p>
