--- a/join.html
+++ b/join.html
@@ -278,7 +278,7 @@
             >
           </p>
           <p>
-            <a class="link button" href="http://map.streamlinesmp.com"
+            <a class="link button" href="http://stats.streamlinesmp.com"
               ><strong>STATS</strong></a
             >
           </p>
