Fixed footer bugs

--- a/community.html
+++ b/community.html
@@ -65,7 +65,7 @@
           <a
             target="”_blank”"
             href="https://discord.gg/EAe4S6HdVC"
-            class="button"
+            class="button large-button"
           >
             <div class="icon">
               <img
@@ -79,7 +79,7 @@
           <a
             href="https://www.youtube.com/channel/UCXg4U9_EQE_cKuU4PfZLn-w"
             target="”_blank”"
-            class="button"
+            class="button large-button"
           >
             <div class="icon">
               <img
@@ -93,7 +93,7 @@
           <a
             target="”_blank”"
             href="https://twitter.com/streamlinesmp"
-            class="button"
+            class="button large-button"
           >
             <div class="icon">
               <img
@@ -107,7 +107,7 @@
           <a
             target="”_blank”"
             href="https://www.reddit.com/r/StreamlineSMP/"
-            class="button"
+            class="button large-button"
           >
             <div class="icon">
               <img
@@ -121,7 +121,7 @@
           <a
             target="”_blank”"
             href="https://www.instagram.com/streamlinesmp/"
-            class="button"
+            class="button large-button"
           >
             <div class="icon">
               <img
@@ -135,7 +135,7 @@
           <a
             target="”_blank”"
             href="https://www.tiktok.com/@streamlinesmp"
-            class="button"
+            class="button large-button"
           >
             <div class="icon">
               <img
@@ -152,7 +152,7 @@
           <a
             target="”_blank”"
             href="https://topminecraftservers.org/vote/19811"
-            class="button"
+            class="button large-button"
           >
             <div class="icon">
               <img
@@ -166,7 +166,7 @@
           <a
             target="”_blank”"
             href="https://servers-minecraft.com/vote/1020"
-            class="button"
+            class="button large-button"
           >
             <div class="icon">
               <img
@@ -180,7 +180,7 @@
           <a
             target="”_blank”"
             href="https://minecraft-server-list.com/server/480202/"
-            class="button"
+            class="button large-button"
           >
             <div class="icon">
               <img
@@ -191,7 +191,7 @@
             </div>
             <h3>MC Server List</h3>
           </a>
-          <a target="”_blank”" href="#" class="button">
+          <a target="”_blank”" href="#" class="button large-button">
             <div class="icon">
               <img
                 class="checkbox"
@@ -204,7 +204,9 @@
         </div>
         <h2 class="sub-header">CHECK OUT THE STATS</h2>
         <div class="grid">
-          <a class="button stats" href="http://stats.streamlinesmp.com/"
+          <a
+            class="button large-button stats"
+            href="http://stats.streamlinesmp.com/"
             >Minecraft Server Stats</a
           >
         </div>
