--- a/join.html
+++ b/join.html
@@ -88,7 +88,7 @@
                 channel.
               </p>
               <a
-                class="button"
+                class="button large-button"
                 target="_blank"
                 href="https://discord.gg/EAe4S6HdVC"
                 >Join the Discord</a
@@ -116,7 +116,7 @@
                 Streamline will follow the rules and contribute to the server.
               </p>
               <a
-                class="button"
+                class="button large-button"
                 target="_blank"
                 href="https://dyno.gg/form/8ac19b49"
                 >Fill out the form</a
@@ -137,7 +137,7 @@
             </div>
             <p>Here's a video explanation in case you get lost:</p>
             <a
-              class="button hide-desktop"
+              class="button large-button hide-desktop"
               target="_blank"
               href="https://www.youtube.com/watch?v=3"
               >Tutorial Video</a
