Updated vote links

--- a/community.html
+++ b/community.html
@@ -151,7 +151,7 @@
         <div class="grid">
           <a
             target="”_blank”"
-            href="https://topminecraftservers.org/vote/19811"
+            href="https://topminecraftservers.org/vote/28132"
             class="button large-button"
           >
             <div class="icon">
@@ -205,8 +205,9 @@
         <h2 class="sub-header">CHECK OUT THE STATS</h2>
         <div class="grid">
           <a
+            target="”_blank”"
+            href="https://minecraft.buzz/vote/5307"
             class="button large-button stats"
-            href="http://stats.streamlinesmp.com/"
             >Minecraft Server Stats</a
           >
         </div>
