--- a/community.html
+++ b/community.html
@@ -191,7 +191,11 @@
             </div>
             <h3>MC Server List</h3>
           </a>
-          <a target="”_blank”" href="#" class="button large-button">
+          <a
+            target="”_blank”"
+            href="https://minecraft.buzz/vote/5307"
+            class="button large-button"
+          >
             <div class="icon">
               <img
                 class="checkbox"
@@ -206,7 +210,7 @@
         <div class="grid">
           <a
             target="”_blank”"
-            href="https://minecraft.buzz/vote/5307"
+            href="http://stats.streamlinesmp.com/"
             class="button large-button stats"
             >Minecraft Server Stats</a
           >
