--- a/community.html
+++ b/community.html
@@ -179,7 +179,7 @@
           </a>
           <a
             target="”_blank”"
-            href="https://minecraft-server-list.com/server/480202/"
+            href="https://minecraft-server-list.com/server/480202/vote/"
             class="button large-button"
           >
             <div class="icon">
