--- a/community.html
+++ b/community.html
@@ -175,7 +175,7 @@
                 alt="checkbox"
               />
             </div>
-            <h3>MC Servers</h3>
+            <h3>Servers MC</h3>
           </a>
           <a
             target="”_blank”"
@@ -204,6 +204,34 @@
               />
             </div>
             <h3>MC Buzz</h3>
+          </a>
+          <a
+            target="”_blank”"
+            href="https://servers-minecraft.net/server-streamline-smp.21149"
+            class="button large-button"
+          >
+            <div class="icon">
+              <img
+                class="checkbox"
+                src="./Images/Community/outline_check_box_black_24dp.png"
+                alt="checkbox"
+              />
+            </div>
+            <h3>MC Servers</h3>
+          </a>
+          <a
+            target="”_blank”"
+            href="https://best-minecraft-servers.co/server-streamline-smp.9067/vote"
+            class="button large-button"
+          >
+            <div class="icon">
+              <img
+                class="checkbox"
+                src="./Images/Community/outline_check_box_black_24dp.png"
+                alt="checkbox"
+              />
+            </div>
+            <h3>Best MC</h3>
           </a>
         </div>
         <h2 class="sub-header">CHECK OUT THE STATS</h2>
