Remove stats button and change to wiki button

--- a/community.html
+++ b/community.html
@@ -234,13 +234,13 @@
             <h3>Best MC</h3>
           </a>
         </div>
-        <h2 class="sub-header">CHECK OUT THE STATS</h2>
+        <h2 class="sub-header">LEARN MORE</h2>
         <div class="grid">
           <a
             target="”_blank”"
-            href="http://stats.streamlinesmp.com/"
+            href="https://streamlinesmp.fandom.com/wiki/Streamline_SMP_Wiki"
             class="button large-button stats"
-            >Minecraft Server Stats</a
+            >CHECK OUT THE WIKI</a
           >
         </div>
       </main>
