Updated support link

--- a/contact.html
+++ b/contact.html
@@ -68,8 +68,8 @@
           <div class="content-grid">
             <div class="block">
               <h3>
-                Want a fast response? Fill out the form and somebody in our
-                staff team will message you on Discord.
+                Want a fast response? Start a support ticket and one of our
+                staff will contact you within minutes.
               </h3>
               <div class="wrapper-icon-txt green">
                 <svg
@@ -94,11 +94,11 @@
               </div>
               <a
                 target="_blank"
-                href="https://dyno.gg/form/e9d41f74"
+                href="https://discord.com/channels/775831180086870096/981954520470921246"
                 class="button"
-                >Contact Form</a
+                >Support Ticket</a
               >
-              <p class="response-time">Average response: >7 hours</p>
+              <p class="response-time">Average response: less than 7 hours</p>
             </div>
             <div class="block">
               <h3>
@@ -122,7 +122,7 @@
               <a href="mailto:support@streamlinesmp.com" class="button"
                 >Email Us</a
               >
-              <p class="response-time">Average response >24 hours</p>
+              <p class="response-time">Average response less than 24 hours</p>
             </div>
           </div>
         </article>
