Updated Accepted message

--- a/join.html
+++ b/join.html
@@ -242,10 +242,12 @@
                       <div class="disc-btm-text">
                         <p class="disc-highlight">@Hex32</p>
                         <p>
-                          Congrats, you are now a Streamliner! You will be
-                          whitelisted within a couple minutes. Thx for joining
-                          and have fun.
+                          Welcome to the server! You are now accepted and have
+                          been whitelisted! Also, make sure to set your
+                          notification preferences in
                         </p>
+                        <p class="disc-highlight">#roles</p>
+                        <p>!</p>
                       </div>
                     </div>
                   </div>
