--- a/index.html
+++ b/index.html
@@ -31,6 +31,22 @@
       })(window, document, 'script', 'dataLayer', 'GTM-M6LW6WS')
     </script>
     <!-- End Google Tag Manager -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-230695574-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+
+      gtag('config', 'UA-230695574-1')
+    </script>
+    <!-- End Global site tag - Google Analytics -->
   </head>
 
   <body>
