Donate Link Changed

--- a/index.html
+++ b/index.html
@@ -31,22 +31,6 @@
       })(window, document, 'script', 'dataLayer', 'GTM-M6LW6WS')
     </script>
     <!-- End Google Tag Manager -->
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-230695574-1"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || []
-      function gtag() {
-        dataLayer.push(arguments)
-      }
-      gtag('js', new Date())
-
-      gtag('config', 'UA-230695574-1')
-    </script>
-    <!-- End Global site tag - Google Analytics -->
   </head>
 
   <body>
@@ -181,12 +165,7 @@
           </p>
           <hr />
           <p>
-            <a
-              target="”_blank”"
-              class="link"
-              href="https://discord.com/channels/775831180086870096/786974659005644851"
-              >DONATE</a
-            >
+            <a target="”_blank”" class="link" href="./donate">DONATE</a>
           </p>
           <p><a class="link" href="./contact">CONTACT US</a></p>
         </div>
