--- a/community.html
+++ b/community.html
@@ -259,12 +259,7 @@
           </p>
           <hr />
           <p>
-            <a
-              target="”_blank”"
-              class="link"
-              href="https://discord.com/channels/775831180086870096/786974659005644851"
-              >DONATE</a
-            >
+            <a target="”_blank”" class="link" href="./donate">DONATE</a>
           </p>
           <p><a class="link" href="./contact">CONTACT US</a></p>
         </div>
